tests/baselines/reference/asyncGenerators.functionExpression.6.es5.errors.txt
tests/cases/conformance/asyncGenerators/es5/functionExpressions/asyncGenerators.functionExpression.6.es5.ts(1,33): error TS2524: 'await' expressions cannot be used in a parameter initializer.


==== tests/cases/conformance/asyncGenerators/es5/functionExpressions/asyncGenerators.functionExpression.6.es5.ts (1 errors) ====
    const f = async function * (a = await 1) {}
                                    ~~~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.